add faculty login register routes

--- a/config/config.json
+++ b/config/config.json
@@ -1,1 +1,25 @@
 
+{
+    "development": {
+      "username": "root",
+      "password": "ournet@123",
+      "database": "project_db",
+      "host": "localhost",
+      "dialect": "mysql"
+    },
+    "test": {
+      "username": "root",
+      "password": "ournet@123",
+      "database": "project_db",
+      "host": "localhost",
+      "dialect": "mysql"
+    },
+    "production": {
+      "username": "root",
+      "password": "ournet@123",
+      "database": "project_db",
+      "host": "localhost",
+      "dialect": "mysql"
+    }
+  }
+  
